examples/datalog/27_atomic_ops/08_update_computed.dl.out
Connecting to server at http://127.0.0.1:8080...
Connected!

Server status: healthy
Current knowledge graph: default

> .kg create test_update_computed
Knowledge graph 'test_update_computed' created.
Switched to knowledge graph: test_update_computed
> .kg use test_update_computed
Switched to knowledge graph: test_update_computed
> +prices[(1, 100), (2, 200), (3, 300)].
Inserted 3 fact(s) into 'prices'.
> ?- prices(Id, Price).
3 rows:
  (1, 100)
  (2, 200)
  (3, 300)
> -prices(Id, Price).
Deleted 0 facts from 'prices'.
> +prices(Id, NewPrice) :- prices(Id, Price), NewPrice = Price + Price / 10.
Script error: Failed to register rule: Unsafe rule 'prices': Head variable(s) NewPrice not bound by any positive body atom. All head variables must appear in at least one positive body predicate.
