examples/datalog/27_atomic_ops/08_update_computed.dl
% Test: Update with computed values
% Expected: Update using arithmetic
% Category: 27_atomic_ops
% Priority: P2 - Atomic operations

.kg create test_update_computed
.kg use test_update_computed

+prices[(1, 100), (2, 200), (3, 300)].

?- prices(Id, Price).

% Apply 10% increase
-prices(Id, Price).
+prices(Id, NewPrice) :- prices(Id, Price), NewPrice = Price + Price / 10.

?- prices(Id, Price).

.kg use default
.kg drop test_update_computed
